Preparation of notebook

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -16,6 +16,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies and Setup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import scipy.stats as st\n",
+    "\n",
+    "# Study data files\n",
+    "mouse_metadata_path = \"data/Mouse_metadata.csv\"\n",
+    "study_results_path = \"data/Study_results.csv\"\n",
+    "\n",
+    "# Read the mouse data and the study results\n",
+    "mouse_metadata = pd.read_csv(mouse_metadata_path)\n",
+    "study_results = pd.read_csv(study_results_path)\n",
+    "\n",
+    "# Combine the data into a single DataFrame\n",
+    "\n",
+    "\n",
+    "# Display the data table for preview"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -132,7 +157,7 @@
     }
    ],
    "source": [
-    "# Dependencies and Setup\n",
+    "# Dependencies and Setup                        #  To be Removed\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
@@ -153,6 +178,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking the number of mice."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -168,7 +202,17 @@
     }
    ],
    "source": [
-    "# Checking the number of mice.\n"
+    "# Checking the number of mice.          # To be removed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Our data should be uniquely identified by Mouse ID and Timepoint                  # To be removed\n",
+    "# Get the duplicate mice by ID number that shows up for Mouse ID and Timepoint. "
    ]
   },
   {
@@ -190,6 +234,15 @@
    "source": [
     "# Our data should be uniquely identified by Mouse ID and Timepoint\n",
     "# Get the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: Get all the data for the duplicate mouse ID. "
    ]
   },
   {
@@ -414,7 +467,16 @@
     }
    ],
    "source": [
-    "# Optional: Get all the data for the duplicate mouse ID. \n"
+    "# Optional: Get all the data for the duplicate mouse ID.            # To be removed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.       # To be removed"
    ]
   },
   {
@@ -540,6 +602,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking the number of mice in the clean DataFrame.           # To be removed"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -563,6 +634,19 @@
    "metadata": {},
    "source": [
     "## Summary Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "\n",
+    "# Use groupby and summary statistical methods to calculate the following properties of each drug regimen: \n",
+    "# mean, median, variance, standard deviation, and SEM of the tumor volume. \n",
+    "# Assemble the resulting series into a single summary DataFrame.\n"
    ]
   },
   {
@@ -725,11 +809,23 @@
     }
    ],
    "source": [
-    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen           # To be removed\n",
     "\n",
     "# Use groupby and summary statistical methods to calculate the following properties of each drug regimen: \n",
     "# mean, median, variance, standard deviation, and SEM of the tumor volume. \n",
     "# Assemble the resulting series into a single summary DataFrame.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A more advanced method to generate a summary statistics table of mean, median, variance, standard deviation,\n",
+    "# and SEM of the tumor volume for each regimen (only one method is required in the solution)\n",
+    "\n",
+    "# Using the aggregation method, produce the same summary statistics in a single line"
    ]
   },
   {
@@ -888,7 +984,7 @@
     }
    ],
    "source": [
-    "# A more advanced method to generate a summary statistics table of mean, median, variance, standard deviation,\n",
+    "# A more advanced method to generate a summary statistics table of mean, median, variance, standard deviation,          # To be removed\n",
     "# and SEM of the tumor volume for each regimen (only one method is required in the solution)\n",
     "\n",
     "# Using the aggregation method, produce the same summary statistics in a single line\n"
@@ -899,6 +995,15 @@
    "metadata": {},
    "source": [
     "## Bar and Pie Charts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using Pandas."
    ]
   },
   {
@@ -918,7 +1023,16 @@
     }
    ],
    "source": [
-    "# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using Pandas.\n"
+    "# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using Pandas.            # To be removed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using pyplot."
    ]
   },
   {
@@ -938,7 +1052,16 @@
     }
    ],
    "source": [
-    "# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using pyplot.\n"
+    "# Generate a bar plot showing the total number of rows (Mouse ID/Timepoints) for each drug regimen using pyplot.            # To be removed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a pie plot showing the distribution of female versus male mice using Pandas"
    ]
   },
   {
@@ -958,7 +1081,16 @@
     }
    ],
    "source": [
-    "# Generate a pie plot showing the distribution of female versus male mice using Pandas\n"
+    "# Generate a pie plot showing the distribution of female versus male mice using Pandas          # To be removed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a pie plot showing the distribution of female versus male mice using pyplot"
    ]
   },
   {
@@ -978,7 +1110,7 @@
     }
    ],
    "source": [
-    "# Generate a pie plot showing the distribution of female versus male mice using pyplot\n"
+    "# Generate a pie plot showing the distribution of female versus male mice using pyplot          # To be removed\n"
    ]
   },
   {
@@ -990,11 +1122,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the final tumor volume of each mouse across four of the treatment regimens:  \n",
+    "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
+    "\n",
+    "# Start by getting the last (greatest) timepoint for each mouse\n",
+    "\n",
+    "\n",
+    "# Merge this group df with the original DataFrame to get the tumor volume at the last timepoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the final tumor volume of each mouse across four of the treatment regimens:             # To be removed\n",
     "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
     "\n",
     "# Start by getting the last (greatest) timepoint for each mouse\n",
@@ -1005,21 +1152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Capomulin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
-      "Ramicane's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
-      "Infubinol's potential outliers: 31    36.321346\n",
-      "Name: Tumor Volume (mm3), dtype: float64\n",
-      "Ceftamin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Put treatments into a list for for loop (and later for plot labels)\n",
     "\n",
@@ -1041,6 +1176,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Capomulin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
+      "Ramicane's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
+      "Infubinol's potential outliers: 31    36.321346\n",
+      "Name: Tumor Volume (mm3), dtype: float64\n",
+      "Ceftamin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Put treatments into a list for for loop (and later for plot labels)               To be removed\n",
+    "\n",
+    "\n",
+    "# Create empty list to fill with tumor vol data (for plotting)\n",
+    "\n",
+    "\n",
+    "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "\n",
+    "    \n",
+    "    # Locate the rows which contain mice on each drug and get the tumor volumes\n",
+    "\n",
+    "    \n",
+    "    # add subset \n",
+    "\n",
+    "    \n",
+    "    # Determine outliers using upper and lower bounds\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a box plot that shows the distrubution of the tumor volume for each treatment group."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -1056,7 +1236,7 @@
     }
    ],
    "source": [
-    "# Generate a box plot that shows the distrubution of the tumor volume for each treatment group.\n"
+    "# Generate a box plot that shows the distrubution of the tumor volume for each treatment group.         # To be removed\n"
    ]
   },
   {
@@ -1064,6 +1244,15 @@
    "metadata": {},
    "source": [
     "## Line and Scatter Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a line plot of tumor volume vs. time point for a single mouse treated with Capomulin"
    ]
   },
   {
@@ -1083,7 +1272,16 @@
     }
    ],
    "source": [
-    "# Generate a line plot of tumor volume vs. time point for a single mouse treated with Capomulin\n"
+    "# Generate a line plot of tumor volume vs. time point for a single mouse treated with Capomulin         # To be removed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a scatter plot of mouse weight vs. the average observed tumor volume for the entire Capomulin regimen"
    ]
   },
   {
@@ -1103,7 +1301,7 @@
     }
    ],
    "source": [
-    "# Generate a scatter plot of mouse weight vs. the average observed tumor volume for the entire Capomulin regimen\n"
+    "# Generate a scatter plot of mouse weight vs. the average observed tumor volume for the entire Capomulin regimen            # To be removed\n"
    ]
   },
   {
@@ -1111,6 +1309,16 @@
    "metadata": {},
    "source": [
     "## Correlation and Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the correlation coefficient and a linear regression model \n",
+    "# for mouse weight and average observed tumor volume for the entire Capomulin regimen"
    ]
   },
   {
@@ -1137,7 +1345,7 @@
     }
    ],
    "source": [
-    "# Calculate the correlation coefficient and a linear regression model \n",
+    "# Calculate the correlation coefficient and a linear regression model                               # To be removed\n",
     "# for mouse weight and average observed tumor volume for the entire Capomulin regimen\n"
    ]
   },
@@ -1166,7 +1374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
