Final revision of the Jupyter notebook

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -10,13 +10,20 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "Nine drugs (Capomulin, Ketapril, Naftisol, Infubinol, Stelasyn, Ramicane, Zoniferol, Propriva, and Ceftamin) and a placebo were tested on 248 mice over a period of 45 days. The changes in the volume of the tumors were recorded at regular interval through the experiment.\n",
+    "The gender of the mice in the dataset was equally distributed between male and female (respectively 51.0% and 49.0%)\n",
+    "\n",
+    "The data from the four drugs showing the smallest standard deviations for the tumor volume (Capomulin, Ramicane, Infubinol, and Ceftamin) was investigated further. They also correspond to the drugs giving the smallest mean tumor volume once the drug Propriva was discarded on the basis of its slightly larger standard deviation and smaller sample size.\n",
+    "The analysis of the distributions of the tumor sizes at the end of the treatment for these four drugs shows that mice treated with Capomulin and Ramicane ended up with smaller tumors than the ones treated with Infubinol and Ceftamin.\n",
+    "\n",
+    "The results for the mice treated with Capomulin show a strong positive correlation between the weight of the mice and the volume of their tumor.\n",
+    "\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +133,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +170,7 @@
        "249"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +191,7 @@
        "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +419,7 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +541,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +564,7 @@
        "248"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +725,7 @@
        "Zoniferol                6.966589                0.516398  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +898,7 @@
        "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +930,7 @@
        "Text(0, 0.5, '# of Observed Mouse Timepoints')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -945,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1069,21 +1076,21 @@
        "      <td>Infubinol</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>a275</td>\n",
        "      <td>45</td>\n",
        "      <td>62.999356</td>\n",
        "      <td>Ceftamin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>3</th>\n",
        "      <td>a411</td>\n",
        "      <td>45</td>\n",
        "      <td>38.407618</td>\n",
        "      <td>Ramicane</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>4</th>\n",
        "      <td>a444</td>\n",
        "      <td>45</td>\n",
        "      <td>43.047543</td>\n",
@@ -1097,35 +1104,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>238</th>\n",
+       "      <th>95</th>\n",
        "      <td>y769</td>\n",
        "      <td>45</td>\n",
        "      <td>68.594745</td>\n",
        "      <td>Ceftamin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>239</th>\n",
+       "      <th>96</th>\n",
        "      <td>y793</td>\n",
        "      <td>45</td>\n",
        "      <td>31.896238</td>\n",
        "      <td>Capomulin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>240</th>\n",
+       "      <th>97</th>\n",
        "      <td>y865</td>\n",
        "      <td>45</td>\n",
        "      <td>64.729837</td>\n",
        "      <td>Ceftamin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>244</th>\n",
+       "      <th>98</th>\n",
        "      <td>z578</td>\n",
        "      <td>45</td>\n",
        "      <td>30.638696</td>\n",
        "      <td>Ramicane</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>245</th>\n",
+       "      <th>99</th>\n",
        "      <td>z581</td>\n",
        "      <td>45</td>\n",
        "      <td>62.754451</td>\n",
@@ -1137,23 +1144,23 @@
        "</div>"
       ],
       "text/plain": [
-       "    Mouse ID  Timepoint  Tumor Volume (mm3) Drug Regimen\n",
-       "0       a203         45           67.973419    Infubinol\n",
-       "1       a251         45           65.525743    Infubinol\n",
-       "3       a275         45           62.999356     Ceftamin\n",
-       "6       a411         45           38.407618     Ramicane\n",
-       "7       a444         45           43.047543     Ramicane\n",
-       "..       ...        ...                 ...          ...\n",
-       "238     y769         45           68.594745     Ceftamin\n",
-       "239     y793         45           31.896238    Capomulin\n",
-       "240     y865         45           64.729837     Ceftamin\n",
-       "244     z578         45           30.638696     Ramicane\n",
-       "245     z581         45           62.754451    Infubinol\n",
+       "   Mouse ID  Timepoint  Tumor Volume (mm3) Drug Regimen\n",
+       "0      a203         45           67.973419    Infubinol\n",
+       "1      a251         45           65.525743    Infubinol\n",
+       "2      a275         45           62.999356     Ceftamin\n",
+       "3      a411         45           38.407618     Ramicane\n",
+       "4      a444         45           43.047543     Ramicane\n",
+       "..      ...        ...                 ...          ...\n",
+       "95     y769         45           68.594745     Ceftamin\n",
+       "96     y793         45           31.896238    Capomulin\n",
+       "97     y865         45           64.729837     Ceftamin\n",
+       "98     z578         45           30.638696     Ramicane\n",
+       "99     z581         45           62.754451    Infubinol\n",
        "\n",
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,13 +1177,13 @@
     "mice_last_tumor_df=mice_last_tumor_df[mice_last_tumor_df['Drug Regimen'].isin(drug_list)]\n",
     "\n",
     "mice_last_tumor_df=mice_last_tumor_df[['Mouse ID','Timepoint','Tumor Volume (mm3)','Drug Regimen']]\n",
-    "# mice_last_tumor_df.reset_index(drop=True,inplace=True)                           # If the dataframe is reindexed, then the outlier at 36.321346 for Infubinol is not at index=31 anymore as in the example, but at index=15\n",
-    "mice_last_tumor_df"
+    "mice_last_tumor_df.reset_index(drop=True,inplace=True)                           # If the dataframe is reindexed, then the outlier at 36.321346 for Infubinol is not at index=31 anymore as in the example, but at index=15\n",
+    "mice_last_tumor_df                                                               # Feel free to comment the line above if matching the example from the starter code is more important than reindexing the dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1192,7 @@
      "text": [
       "Capomulin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
       "Ramicane's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
-      "Infubinol's potential outliers: 31    36.321346\n",
+      "Infubinol's potential outliers: 15    36.321346\n",
       "Name: Tumor Volume (mm3), dtype: float64\n",
       "Ceftamin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n"
      ]
@@ -1202,7 +1209,6 @@
     "    lim_low=quartile[0.25]-1.5*iqr\n",
     "    lim_high=quartile[0.75]+1.5*iqr\n",
     "    outlier=tumor_size_list.loc[(tumor_size_list < lim_low) | (tumor_size_list > lim_high)]\n",
-    "    # print(f\"{drug}: lower limit {lim_low}, higher limit {lim_high}, IQR= {iqr}\")\n",
     "    print(f\"{drug}'s potential outliers: {outlier}\")\n",
     "    tumor_scatter_dict[drug]=tumor_size_list.values\n",
     "\n",
@@ -1212,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
